# mokuro-online

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  gunicorn.conf.py  populate_secret.py  pyproject.toml
app/: __init__.py  config.py  db.py  routes.py
app/static/: index.html  online-mokuro.html
tests/: conftest.py  test_hash_check.py  test_hashes.py  test_make_html.py  test_new_pages.py  test_routes.py
tests/res/: test_chapter.json
